# nvidia-monitor

./: .gitignore  CMakeLists.txt  FindXNVCtrl.cmake  FindXext.cmake  NVidiaMonitorConfig.ui  PKGBUILD  README.md  fr.po  localize.sh  nvidia-monitor.install  plasma_applet_nvidia-monitor.desktop  plasma_applet_nvidia-monitor.pot  plasma_engine_nvidia-monitor.desktop
applet/: DataSource.cpp  DataSource.h  NVidiaMonitorApplet.cpp  NVidiaMonitorApplet.h  NVidiaMonitorApplet.inl  applet.cpp  applet.h
cmake/: FindXNVCtrl.cmake
data-engine/: DataSource.cpp  DataSource.h  NVidiaMonitorDataEngine.cpp  NVidiaMonitorDataEngine.h
